Fixed navbar-links on ie10

--- a/src/stylesheets/partials/navbar/_mobile.scss
+++ b/src/stylesheets/partials/navbar/_mobile.scss
@@ -49,6 +49,7 @@ nav.nav {
 			width: 100%;
 
 			a {
+				display: block;
 				padding: 0 15px;
 				text-decoration: none;
 				color: $color-nav-link;
